--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ subjects:
 - !lcsh 'American poetry -- 19th century'
 - !lcsh 'Whitman, Walt, 1819-1892'
 - !lcc 'PS'
+- GITenberg
 title: A Day with Walt Whitman
 url: http://www.gutenberg.org/ebooks/36305
